Improve School and Student classes. Add Grade enum